# cpp-build-system

./: .gitignore  CMakeLists.txt  README
cli/: CMakeLists.txt  main.cpp
cli/commands/: CMakeLists.txt
cli/commands/base/: CMakeLists.txt
cli/commands/base/include/: base-args-parser.hpp  base-args-parser.tpp  base-build-file-builder.hpp  base-build-file-builder.tpp  base.hpp  base.tpp
cli/commands/init/: CMakeLists.txt
cli/commands/init/include/: init-args-parser.hpp  init-args-parser.tpp  init-types.hpp  init.hpp  init.tpp
cli/commands/new/: CMakeLists.txt
cli/commands/new/include/: new-args-parser.hpp  new-args-parser.tpp  new-binary.hpp  new-binary.tpp  new-library.hpp  new-library.tpp  new-types.hpp  new-utils.hpp  new.hpp  new.tpp
cli/commands/new/src/: new-utils.cpp
cli/core/: CMakeLists.txt
cli/core/include/: constants.hpp  program-options.hpp  types.hpp
cli/utils/: CMakeLists.txt
cli/utils/include/: arg-parser.hpp  build-file-builder-legacy.hpp  build-file-builder-legacy.tpp  build-file-builder.hpp  build-file-builder.tpp  exec-helper.hpp  files-helper.hpp  string-normalizer.hpp  toml-validator.hpp
cli/utils/src/: arg-parser.cpp  exec-helper.cpp  files-helper.cpp  string-normalizer.cpp  toml-validator.cpp
